# AI-VEA

./: .gitignore  .prettierignore  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: .coverage  .env.example  README.md  package.json  pyproject.toml
apps/api/app/: __init__.py  config.py  logging.py  main.py
apps/api/app/api/: engagement_analyses.py  health.py
apps/api/app/pipelines/: __init__.py
apps/api/app/pipelines/engagement_analysis/: __init__.py  content_analyzer.py  context.py  llm_client.py  media_extractor.py  models.py  pipeline.py  stage.py  structural_analyzer.py  whisper_worker.py
apps/api/app/pipelines/engagement_analysis/stages/: __init__.py  audience_simulation.py  consensus_scoring.py  content_understanding.py  engagement_understanding.py  media_understanding.py  recommendations.py  structural_understanding.py
apps/api/app/services/: engagement_analysis_processor.py
apps/api/tests/: test_content_understanding_analyzer.py  test_content_understanding_contract.py  test_engagement_analyses.py  test_engagement_analysis_pipeline.py  test_health.py  test_llm_client.py  test_structural_understanding.py
apps/web/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: api.ts  app.test.tsx  app.tsx  styles.css
