[project]
name = "ai-vea-api"
version = "0.1.0"
description = "FastAPI backend for AI VEA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.9.0",
  "fastapi>=0.136.3",
  "faster-whisper>=1.2.0",
  "imageio-ffmpeg>=0.6.0",
  "librosa>=0.11.0",
  "opencv-python>=4.13.0.92",
  "pydantic-settings>=2.9.1",
  "python-multipart>=0.0.20",
  "scenedetect>=0.7",
  "uvicorn[standard]>=0.34.3"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pyright>=1.1.401",
  "pytest>=8.4.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.12"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W"
]
ignore = [
  "ANN401"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
